--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "nodemailer": "^4.7.0"
+    "nodemailer": "^4.7.0",
+    "npm": "^6.5.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
