--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "nodemailer": "^4.7.0",
-    "npm": "^6.5.0"
+    "nodemailer-smtp-transport": "^2.7.4",
+    "npm": "^6.5.0",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
